--- a/Modul295PraxisArbeit/appsettings.json
+++ b/Modul295PraxisArbeit/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-43I4QIL;Database=JetStreamDB;User Id=sa;Password=1234;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-43I4QIL;Database=JetStreamDB;User Id=api_user;Password=abcd;TrustServerCertificate=True;"
   },
   "JwtSettings": {
     "Key": "SuperSecureKeyForJWTToken123!jaf832uu4ejfij32oijrjlksdjfljsdl"
