--- a/Modul295PraxisArbeit/appsettings.json
+++ b/Modul295PraxisArbeit/appsettings.json
@@ -11,5 +11,8 @@
   },
   "JwtSettings": {
     "Key": "SuperSecureKeyForJWTToken123!jaf832uu4ejfij32oijrjlksdjfljsdl"
+  },
+  "DeepL": {
+    "ApiKey": "b43932ca-4cfb-44aa-9911-3ddf2d92faf4:fx"
   }
 }
