--- a/Modul295PraxisArbeit/appsettings.json
+++ b/Modul295PraxisArbeit/appsettings.json
@@ -14,5 +14,9 @@
   },
   "DeepL": {
     "ApiKey": "b43932ca-4cfb-44aa-9911-3ddf2d92faf4:fx"
+  },
+    "MongoDbSettings": {
+      "ConnectionString": "mongodb://localhost:27017",
+      "DatabaseName": "Modul295Db"
   }
 }
