fixed path for script

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,7 +18,7 @@
             "command": "powershell",
             "args": [
                 "-ExecutionPolicy", "Bypass",
-                "-File", "${workspaceFolder}\\Modul295PraxisArbeit\\run_tests.ps1"
+                "-File", "${workspaceFolder}/Modul295PraxisArbeit/Scripts/run_tests.ps1"
             ],
             "problemMatcher": [],
             "group": {
