Added Own Command
i have added my own commad that inserts test data into my mongodb for OrderServices

--- a/TestDataInserter/TestDataInserter.csproj
+++ b/TestDataInserter/TestDataInserter.csproj
@@ -1,14 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <IsPackable>true</IsPackable>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>testdata</ToolCommandName>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
+
+
+
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="3.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="9.0.0" />
+
   </ItemGroup>
 
   <ItemGroup>
