--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
   db:
     image: mongo:latest
     container_name: mymongo
+    command: ["--bind_ip_all"]
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongoadmin
       MONGO_INITDB_ROOT_PASSWORD: secret
@@ -28,6 +29,8 @@ services:
 #      - ASPNETCORE_URLS="https://*:443"
 #      - ASPNETCORE_HTTPS_PORTS=443
 #      - ASPNETCORE_ENVIRONMENT=Development
+    volumes:
+      - ./Modul295PraxisArbeit/Logs:/publish/Logs
     ports:
       - "5013:8080"
     networks:
