Use ENV Varbiable for Connection String

--- a/Modul295PraxisArbeit/appsettings.json
+++ b/Modul295PraxisArbeit/appsettings.json
@@ -16,7 +16,7 @@
     "ApiKey": "b43932ca-4cfb-44aa-9911-3ddf2d92faf4:fx"
   },
     "MongoDbSettings": {
-      "ConnectionString": "mongodb://mongoadmin:secret@mymongo:27017",
+      "ConnectionString": "mongodb://mongoadmin:secret@localhost:27017",
       "DatabaseName": "Modul295Db"
   }
 }
