--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Start MongoDB and application
         run: |
-          docker compose up db -d --build
+          docker compose up db -d
           
       - name: Wait for MongoDB to be ready
         run: |
