--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,11 +11,12 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: neloserver
 
 jobs:
   build:
 
+    name: build dotnet
     runs-on: ubuntu-latest
 
     steps:
@@ -49,7 +50,7 @@ jobs:
 
     needs:
       build
-    name: Push Docker image to multiple registries
+    name: deploy docker
     runs-on: ubuntu-latest
     permissions:
       packages: write
